Updating Swagger files
